--- a/src/main/webapp/templates-hidden/records.html
+++ b/src/main/webapp/templates-hidden/records.html
@@ -155,7 +155,7 @@
       <div>
         <div class="input" id="mobilespace">
         </div>
-        <h5>Agenda</h5>
+        <h5><span data-i18n='Questionários'></span></h5>
         <ul>
           <div class="lift:SecuritySnippet.IsNotMedicalSystem">            
           <li class="lift:SecuritySnippet.hasQuizModule">
