--- a/src/main/webapp/animal/edit_animal.html
+++ b/src/main/webapp/animal/edit_animal.html
@@ -405,7 +405,8 @@
                     <th><span data-i18n='Questionário'></th>
                     <th>Obs</th>
                     <th><span data-i18n='Grupo'></span></th>
-                    <th></th>
+                    <th>Ações</th>
+                    <th><a title='Auditoria' href='#' ><img width='24px' src='/images/audit.png'/></a></th>
                 </thead>
                 <tbody>
                 </tbody>
