--- a/src/main/webapp/animal/edit_animal.html
+++ b/src/main/webapp/animal/edit_animal.html
@@ -486,7 +486,7 @@
                 <div class="clearfix">
                     <label for="name"></label>
                     <div class="input-prepend">
-                        <input type="submit" value="Enviar" id='submit'/>
+                        <input type="submit" value="Enviar" id='submit' class="btn success"/>
                     </div>
                 </div>
             </form>
