--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -769,7 +769,7 @@
                         <div class="form-inline">
                             <div class="form-group">
                                 <label for="name"></label>
-                                <input type="submit" value="Enviar" id="submit"/>
+                                <input type="submit" value="Enviar" id="submit" class="btn btn-success"/>
                             </div>
                         </div>
                     </form>
