preventing insecure passwords

--- a/src/main/webapp/security/change_password.html
+++ b/src/main/webapp/security/change_password.html
@@ -37,13 +37,17 @@
         $(".password_container input").pstrength();
         $(".send").click(function(){
           if(validate()){
-            $.post("/security/changePassword",{"password":$(".password").val()},function(){
-              alert("Alterado com sucesso!");
-              if (AuthUtil.user.is_employee_$qmark) {
-                document.location.href="/calendar"
-              } else {
-                // se não é employee - é cliente de agenda online
-                document.location.href="/security/logout"
+            $.post("/security/changePassword",{"password":$(".password").val()},function(results){
+              if(results === 1 || results == "1"){
+                alert("Alterado com sucesso!");
+                if (AuthUtil.user.is_employee_$qmark) {
+                  document.location.href="/calendar"
+                } else {
+                  // se não é employee - é cliente de agenda online
+                  document.location.href="/security/logout"
+                }
+              }else{
+                alert(eval(results));
               }
             })
           }
