--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -142,6 +142,9 @@
 
                 section.questions.map(function(question) {
                     createQuestion(question, template)
+                    if (question.type == 8) {
+                        $('#'+question.id).jqte();
+                    }
                 })
             }
 
@@ -154,7 +157,7 @@
                         template = createText(question);
                         break;
                     case 1: 
-                        template = createParagraph(question);
+                        template = createParagraph(question, false);
                         break;
                     case 2:
                         template = createList(question, false);
@@ -167,6 +170,9 @@
                         break;
                     case 7: // pode mais de 1
                         template = createList(question, true);
+                        break;
+                    case 8: // texto rico
+                        template = createParagraph(question, true);
                         break;
                 }
 
@@ -295,7 +301,7 @@
                 return template;
             }
 
-            function createParagraph(question) {
+            function createParagraph(question, rich) {
                 var template = $($("#paragraph-template").html());
                 formatQuestion (question, template)
                 if (PRINT == 'true') {
@@ -307,6 +313,7 @@
                     setName(textarea, question.id);
                     setClass(textarea, question.size);
                 }
+//                $('#'+question.id).jqte();
 
                 return template;
             }
