--- a/src/main/webapp/templates-hidden/calendar.html
+++ b/src/main/webapp/templates-hidden/calendar.html
@@ -37,8 +37,9 @@
     <script type="text/javascript" src="/libs/date.js"></script>
     <script type="text/javascript" src="/js/jquery.weekcalendar.js"></script>
     <script type="text/javascript" src="/js/jquery-mask-money.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/components/jquery-editor.css" />
+
     <script type="text/javascript" src="/js/json.js"></script>    
-    
     <script src="/js/bootstrap-modal.js"></script>
     <script src="/js/bootstrap-alerts.js"></script>
     <script src="/js/bootstrap-twipsy.js"></script>
@@ -60,6 +61,8 @@
 	<script language="javascript" src="/js/default/startup.js"></script>
 	<script language="javascript" src="/js/default/mouse_trap.js"></script>
 	<script language="javascript" src="/js/default/bar_code_controller.js"></script>
+  <link href="/js/rich/jquery-te-1.3.6.css" rel="stylesheet"/>
+  <script src="/js/rich/jquery-te-1.3.6.min.js"></script>  
     <script src="/js/mousetrap.min.js"></script>
     <style type="text/css">
       /* Override some defaults */
