--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -143,6 +143,11 @@
                 <img width='32' src="/images/calendar_addon.png"/>
               </a>
           </li>
+          <li class="lift:SecuritySnippet.hasQuizModule">
+              <a href="/quiz/quiz_history" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de Atividades" data-original-title="Relatório de Atividades">
+                <img width='32' src="/images/calendar_addon.png"/>
+              </a>
+          </li>
       </ul>
   	</span>
     <span class="span7" style="float:left">
