allowing exercisedate being greater than today for userassociated categories

--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -144,8 +144,8 @@
               </a>
           </li>
           <li class="lift:SecuritySnippet.hasQuizModule">
-              <a href="/quiz/quiz_history" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de Atividades" data-original-title="Relatório de Atividades">
-                <img width='32' src="/images/calendar_addon.png"/>
+              <a href="/quiz/quiz_history" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de Avaliações/prontuários" data-original-title="Relatório de Avaliações/prontuários">
+                <img width='32' src="/images/records.png"/>
               </a>
           </li>
       </ul>
