product discount - user commission - new attr

--- a/src/main/webapp/product_admin/edit.html
+++ b/src/main/webapp/product_admin/edit.html
@@ -191,6 +191,20 @@
                 </div>
             </div>
             <div class="clearfix">
+                <label for="totalTime">Tempo Total/QTde Aplic</label>
+                <div class="input">
+                  <div class="input-prepend" style='float:left; padding-right:10px'>
+                    <span class="add-on"><img src='/images/clock.png'/></span>
+                    <input class="time mini" id="totalTime" name="totalTime" size="30" type="text"/>
+                    <span class="help-block"></span>
+                  </div>
+                  <div class="input-prepend" style='float:left; padding-right:10px'>
+                      <input class="mini" id="timesOfUse" name="timesOfUse" size="30" type="text"/>
+                      <span class="help-block"></span>
+                  </div>
+                </div>
+            </div>
+            <div class="clearfix">
                 <label for="obs">Observação</label>
                 <div class="input">
                   <div class="input-prepend">
