proportionalizing discunt products salePrice by activity duration

--- a/src/main/webapp/product_admin/edit.html
+++ b/src/main/webapp/product_admin/edit.html
@@ -202,6 +202,9 @@
                       <input class="mini" id="timesOfUse" name="timesOfUse" size="30" type="text"/>
                       <span class="help-block"></span>
                   </div>
+                  <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/product_discount.html' rel="popover" class="_popover_basic _help">
+                    <img src="/images/info.gif" width="20">
+                  </a>
                 </div>
             </div>
             <div class="clearfix">
