--- a/src/main/webapp/templates-hidden/financial.html
+++ b/src/main/webapp/templates-hidden/financial.html
@@ -251,6 +251,11 @@
               </a>
             </li> 
             <li>
+               <a href="/financial_admin/commission_reprocess.html" target="_blancccck" class="_popover_basic" rel="popover" data-content="Reprocessar comissão" data-original-title="Reprocessar comissão">
+                  <img width='32' src="/images/money.png"/>
+               </a>
+            </li>
+            <li>
               <a href="/financial_admin/cheque_report.html" class="_popover_basic" target="_blank" rel="popover" data-content="Relatorio de cheques" data-original-title="Cheques">
                 <img width='32' src="/images/cheque.png"/>
               </a>
