alerting high number of open cashiers

--- a/src/main/webapp/financial_cashier/checkout_open.html
+++ b/src/main/webapp/financial_cashier/checkout_open.html
@@ -23,7 +23,7 @@
             <label for="unit">Unidade</label>
             <div class="input">
               <div class="input-prepend">
-                <select class="medium" id="unit" name="unit" >
+                <select class="large" id="unit" name="unit" >
                 </select>
                 <a href="" class="_popover_basic" rel="popover" data-content="Normalmente o caixa é aberto na sua unidade, a que está no seu cadastro, e neste caso não precisa ser informada. Selecione uma unidade diferente da sua caso você queira abrir o caixa em outra unidade." data-original-title="Informação">
                   <img width='20' src="/images/info.gif"/>
