--- a/src/main/webapp/financial/transfer240.html
+++ b/src/main/webapp/financial/transfer240.html
@@ -5,6 +5,7 @@
   <script src="/js/jquery.tablesorter.pager.js"></script>
   <script type="text/javascript">
   $(function () {
+    $("#account").accountField(true);
     $("#send").click(function(){
       // create and download the remessa file
       $.post('/monthly/transfer', {start:$('#start').val(), end:$('#end').val()}, function(invoicedata){
@@ -42,6 +43,12 @@
               </div>
           </div>
         </div>      
+        <div class="clearfix">
+            <label for="account">Conta</label>
+            <div class="input">
+                <select class="local_storage" name='account' id="account"></select>
+            </div>
+        </div>            
         <div class="clearfix">
           <label for="send"></label>
             <div class="input">
