--- a/src/main/webapp/financial_admin/accountcompanyunit.html
+++ b/src/main/webapp/financial_admin/accountcompanyunit.html
@@ -46,16 +46,24 @@
           <div class="clearfix">
             <label for="agency">Agência</label>
              <div class="input">
-                <div class="input-prepend">
+              <div class='inline-inputs'>
+                <div class="input-prepend" style='float:left; padding-right:10px'>
                   <input class="medium" id="agency" name="agency" type="text"/>
                 </div>
+                <div class="input-prepend" style='float:left; padding-right:10px'>
+                  <span class='label-inline'>
+                      Conta
+                  </span>
+                  <input class="medium" id="accountstr" name="accountstr" type="text"/>
+                </div>
              </div>
+            </div>
           </div>
           <div class="clearfix">
-            <label for="accountstr">Conta</label>
+            <label for="agreement">Convênio</label>
              <div class="input">
                 <div class="input-prepend">
-                  <input class="medium" id="accountstr" name="accountstr" type="text"/>
+                  <input class="medium" id="agreement" name="agreement" type="text"/>
                 </div>
              </div>
           </div>
