--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -244,7 +244,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="lift:SecuritySnippet.isNotEgrexSystem clearfix">
+                        <div class="clearfix">
                             <label for="document">CPF / RG</label>
                             <div class="input">
                                 <div class='inline-inputs'>
