--- a/src/main/webapp/financial/transfer240.html
+++ b/src/main/webapp/financial/transfer240.html
@@ -5,10 +5,10 @@
   <script src="/js/jquery.tablesorter.pager.js"></script>
   <script type="text/javascript">
   $(function () {
-    $("#account").accountField(true);
+    $("#account240").accountField(true);
     $("#send").click(function(){
       // create and download the remessa file
-      $.post('/monthly/transfer', {start:$('#start').val(), end:$('#end').val()}, function(invoicedata){
+      $.post('/monthly/transfer', {start:$('#start').val(), end:$('#end').val(), account:$('#account240').val()}, function(invoicedata){
           eval ("var invoice = " + invoicedata)
           if (invoice.status == "error" || invoice.status != "success") {
             alert (invoice.message)
@@ -44,9 +44,9 @@
           </div>
         </div>      
         <div class="clearfix">
-            <label for="account">Conta</label>
+            <label for="account240">Conta</label>
             <div class="input">
-                <select class="local_storage" name='account' id="account"></select>
+                <select class="local_storage" name='account240' id="account240"></select>
             </div>
         </div>            
         <div class="clearfix">
