calling boleto_bancoob as local option

--- a/src/main/webapp/financial/monthly.html
+++ b/src/main/webapp/financial/monthly.html
@@ -46,7 +46,8 @@
 			    type : "format",
 			    decode : function(id,row){
 			    	// local mostra mesmo que pago
-		        	return "<a target='_blank' href='http://localhost:8000/boleto.php?data="+(new Date(row[4]).getDateBr())+"&valor="+parseFloat(row[5]).formatMoney().replace('.','')+"&nosso_numero="+row[1]+"&documento="+row[1]+"&nome="+row[9]+"'><img width='32' src='/images/bar_code.png'/>" + " <br/> " + row[9]
+		        	return "<a target='_blank' href='http://localhost:8000/boleto.php?data="+(new Date(row[4]).getDateBr())+"&valor="+parseFloat(row[5]).formatMoney().replace('.','')+"&nosso_numero="+row[1]+"&documento="+row[1]+"&nome="+row[9]+"'><img width='32' src='/images/banco_brasil.jpeg'/>" + " <br/> " + row[9]
+		        	+ "<a target='_blank' href='http://localhost:8000/boleto_bancoob.php?data="+(new Date(row[4]).getDateBr())+"&valor="+parseFloat(row[5]).formatMoney().replace('.','')+"&nosso_numero="+row[1]+"&documento="+row[1]+"&nome="+row[9]+"'><img width='32' src='/images/banco_sicoob.jpeg'/>" + " <br/> " + row[9]
 			    }
 			};
 		}
