T and K Date title

--- a/src/main/webapp/financial_cashier/comman_conference.html
+++ b/src/main/webapp/financial_cashier/comman_conference.html
@@ -167,7 +167,7 @@
     <table id="in_commands" class="bordered-table zebra-striped">
       <thead>
         <th>Caixa</th>
-        <th>Data</th>
+        <th title='Data do Atendimento'>Data</th>
         <th>Id</th>
         <th>Nome <span data-i18n='Cliente'></span></th>
         <th>Comanda</th>
