--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -220,7 +220,7 @@
     <table id="grid" class="bordered-table zebra-striped">
       <thead>
         <th>Comanda</th>
-        <th>Data</th>
+        <th title='Data do Atendimento'>Data</th>
         <th class="hide_mobile">Início</th>
         <th class="hide_mobile">Fim</th>        
         <th class="hide_mobile">Código</th>
