user option - commissionatsight

--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -239,6 +239,11 @@
                             </div>
 
                             <div class="form-group with-right-margin">
+                                <label for="commissionAtSight">Comissão a vista?</label>
+                                <input type="checkbox" name="commissionAtSight" class="form-control"/>
+                            </div>
+
+                            <div class="form-group with-right-margin">
                                 <label for="deletePayment">Pode Excluir Pagamento?</label>
                                 <input type="checkbox" name="deletePayment" class="form-control"/>
                             </div>
@@ -350,6 +355,10 @@
                             <div class="form-group with-right-margin">
                                 <label for="cancreatecalendarevents">Pode editar agendamentos?</label>
                                 <input type="checkbox" name="caneditcalendarevents">
+                            </div>
+                            <div class="form-group with-right-margin">
+                                <label for="canbusyevents">Pode bloquear / desbloquear?</label>
+                                <input type="checkbox" name="canbusyevents">
                             </div>
                         </div>
 
