--- a/src/main/webapp/financial/transfer240.html
+++ b/src/main/webapp/financial/transfer240.html
@@ -33,11 +33,11 @@
                 <div class="inline-inputs">
                     <div class="input-prepend" style="float:left; padding-right:10px">
                         <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                        <input type="text" class="input-small date start_of_month" id='start' name="start" placeholder="Início"/>
+                        <input type="text" class="input-small date to_day" id='start' name="start" placeholder="Início"/>
                     </div>
                     <div class="input-prepend" style="float:left; padding-right:10px">
                         <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                        <input type="text" class="input-small date to_day" id='end' name="end" placeholder="Fim"/>
+                        <input type="text" class="input-small date end_of_month" id='end' name="end" placeholder="Fim"/>
                     </div>
                 </div>
               </div>
