--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -140,7 +140,7 @@
 	            <label for="apptype">App Type</label>
 	            <div class="input">
 					<input class="large" id="apptype" name='apptype'>
-	                <span class="help-block">1-ebelle 2-gerirme 3-esmile 4-edoctus 5-egrex 6-ephysio 7-ebellepet</span>
+	                <span class="help-block">1-ebelle 2-gerirme 3-esmile 4-edoctus 5-egrex 6-ephysio 7-ebellepet 8-ebarber</span>
                 </div>
 	            <label for="bpIdForCompany">bpIdForCompany</label>
 	            <div class="input">
