--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -461,6 +461,8 @@
                 var header = "";
                 if ($('.has-pet-system').length > 0) {
                   header = "ebellepet"
+                } else if ($('.has-ebarber-system').length > 0) {
+                  header = "ebarber"
                 } else if ($('.has-edoctus-system').length > 0) {
                   header = "edoctus"
                 } else if ($('.has-ephysio-system').length > 0) {
@@ -474,6 +476,8 @@
                 var logo = "";
                 if ($('.has-pet-system').length > 0) {
                   logo = "ebellepet"
+                } else if ($('.has-ebarber-system').length > 0) {
+                  logo = "ebarber"
                 } else if ($('.has-edoctus-system').length > 0) {
                   logo = "edoctus"
                 } else if ($('.has-ephysio-system').length > 0) {
