--- a/src/main/webapp/templates-hidden/budget.html
+++ b/src/main/webapp/templates-hidden/budget.html
@@ -9,6 +9,7 @@
       <link class="lift:SecuritySnippet.isEgrexSystem" rel="shortcut icon" href="/images/logo_ftr_egrex.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
+      <link class="lift:SecuritySnippet.isEbarberSystem" rel="shortcut icon" href="/images/logo_ftr_ebarber.ico" type="image/x-icon" />
       <!-- falta ebelle pet colocar na ordem e levar para
       os templates -->
       <input type="hidden" class="has-medical-system lift:SecuritySnippet.isMedicalSystem" value="1">
