--- a/src/main/webapp/templates-hidden/calendar_true.html
+++ b/src/main/webapp/templates-hidden/calendar_true.html
@@ -13,6 +13,7 @@
     <link class="lift:SecuritySnippet.isEgrexSystem" rel="shortcut icon" href="/images/logo_ftr_egrex.ico" type="image/x-icon" />
     <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
     <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
+    <link class="lift:SecuritySnippet.isEbarberSystem" rel="shortcut icon" href="/images/logo_ftr_ebarber.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/images/icon.ico">
     <link rel="apple-touch-icon" href="/images/icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/icon.png">
