--- a/src/main/webapp/templates-hidden/quiz.html
+++ b/src/main/webapp/templates-hidden/quiz.html
@@ -9,6 +9,7 @@
       <link class="lift:SecuritySnippet.isEgrexSystem" rel="shortcut icon" href="/images/logo_ftr_egrex.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
+      <link class="lift:SecuritySnippet.isEbarberSystem" rel="shortcut icon" href="/images/logo_ftr_ebarber.ico" type="image/x-icon" />
     <!-- Não deixa pinças no android -->
     <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
       <title data-i18n='Questionário'></title>
