--- a/src/main/webapp/templates-hidden/calendar.html
+++ b/src/main/webapp/templates-hidden/calendar.html
@@ -10,6 +10,7 @@
     <link class="lift:SecuritySnippet.isEgrexSystem" rel="shortcut icon" href="/images/logo_ftr_egrex.ico" type="image/x-icon" />
     <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
     <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
+    <link class="lift:SecuritySnippet.isEbarberSystem" rel="shortcut icon" href="/images/logo_ftr_ebarber.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <title>Relatórios</title>
     <!-- Le fav and touch icons -->
