quizquestion message - ##detalhes##

--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -318,7 +318,7 @@
                                 <span class="help-block">Web site </span>
                             </div>
                         </div>
-                        <div class="lift:SecuritySnippet.isGerirmeSystem clearfix">
+                        <div class="lift:SecuritySnippet.isShowQuizToUser clearfix">
                             <div>
                                 <label for="obscomplement">Detalhes</label>
                                 <div class="input">
