--- a/src/main/webapp/quiz_admin/edit_question.html
+++ b/src/main/webapp/quiz_admin/edit_question.html
@@ -112,6 +112,24 @@
               <span class="help-block">Ordem na seção</span>
             </div>
           </div>
+          <div class="clearfix">
+            <label for="defaultQuestion">Padrão</label>
+            <div class="input">
+              <select id='defaultQuestion' class="xlarge" name='defaultQuestion'></select>
+              <span class="help-block">Questão padrão de resposta</span>
+            </div>
+          </div>
+          <div class="clearfix">
+              <label for="obs">Observação</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="obs" name="obs" size="16"></textarea>
+                  <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/replacedata.html' rel="popover" class="_popover_basic _help">
+                  <img src="/images/info.gif" width="16">
+                  </a>
+                </div>
+              </div>
+          </div>
           <div>
             <label for="name">Texto</label>
              <div class="input editor-medium">
@@ -128,14 +146,6 @@
               </div>
             </div>
           </div>                
-          <div class="clearfix">
-              <label for="obs">Observação</label>
-              <div class="input">
-                <div class="input-prepend">
-                  <textarea class="xlarge" id="obs" name="obs" size="16"></textarea>
-                </div>
-              </div>
-          </div>
           <div class="clearfix">
             <label for="status">Status</label>
             <div class="input">
