--- a/src/main/webapp/quiz_admin/edit_section.html
+++ b/src/main/webapp/quiz_admin/edit_section.html
@@ -46,9 +46,15 @@
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                   <select class="large" id="quizSectionFormat" name="quizSectionFormat" >
                   </select>
-              <span class="help-block">Apenas "Longo Topo" e "Nenhum Label" estão implementados</span>
+                </div>
+                <div class="input-prepend" >
+                  <span class='label-inline'>
+                      Ctrl Impressão
+                  </span>
+                  <select id='printControl' class="large" name='printControl'></select>
                 </div>
               </div>
+              <span class="help-block">Apenas "Longo Topo" e "Nenhum Label" estão implementados</span>
             </div>
           </div>
           <div class="clearfix">
