--- a/src/main/webapp/monthly/edit_monthly.html
+++ b/src/main/webapp/monthly/edit_monthly.html
@@ -35,6 +35,9 @@
                             <input class="small" id="idForCompany" name="idForCompany" size="10" type="text" disabled="" />
                           </div>
                           <div class="input-prepend" style='float:left; padding-right:10px'>
+                            <input class="mini" id="numberVd" name="numberVd" size="5" type="text" disabled="" />
+                          </div>
+                          <div class="input-prepend" style='float:left; padding-right:10px'>
                               <select class="medium" id="status" name="status" >
                               </select>
                           </div>
